# ccusage-ui

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package.json
.github/workflows/: ci.yml
src/: App.tsx  api.ts  format.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  errors.rs  lib.rs  main.rs  settings.rs  state.rs
src-tauri/src/ccusage/: cache.rs  mod.rs  models.rs  parser.rs  runner.rs
