[package]
name = "ccusage-ui"
version = "0.1.0"
description = "A local Tauri desktop dashboard for ccusage token and cost reports"
authors = ["Matt Marcin"]
license = "MIT"
repository = "https://github.com/mattmarcin/ccusage-ui"
edition = "2021"
rust-version = "1.77"
build = "build.rs"

[lib]
name = "ccusage_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "1"
tokio = { version = "1", features = ["process", "sync", "time"] }

[dev-dependencies]
tempfile = "3"

